change flex-box of header to fix wrap in 900px screen

--- a/css/userProfileHeader.css
+++ b/css/userProfileHeader.css
@@ -247,7 +247,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     padding: 10px;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 
     img {
